# event-ledger

./: .env  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  firestore.rules  pyproject.toml
client/: index.html
docs/: harness.md  manual-test-script.md  plan-issue-35.md
flutter_app/: pubspec.yaml
memories/: 2026-02-20-l1-l2-combined-potluck-love-feast.md  2026-02-21-young-peoples-gathering-potluck.md  2026-02-22-potluck-love-feast-districts-1-and-2.md  2026-05-22-international-memorial-day-conference.md
scripts/: backfill_member_arrays.py  deploy_cloud_run.sh  migrate_null_target.py  migrate_page_ownership.py  migrate_to_firestore.py
src/: api.py  api_v2.py  assistant.py  assistant_actions.py  cleanup.py  committer.py  dates.py  db.py  delivery_storage.py  firestore_storage.py  ics_export.py  login.py  memory.py  models.py  notifications.py  occurrence_service.py  page_storage.py  publisher.py  room_storage.py  series_storage.py  storage.py  study_storage.py  telegram_chat_handler.py  workspace_storage.py
templates/: page.html
tests/: test_api.py  test_api_pages.py  test_api_telegram_bot.py  test_api_v2.py  test_assistant.py  test_channels.py  test_cleanup_firestore.py  test_committer.py  test_committer_firestore.py  test_dates.py  test_firestore_storage.py  test_ics_export.py  test_memory.py  test_migrate.py  test_migrate_page_ownership.py  test_models.py  test_notifications.py  test_occurrence_service.py  test_page_storage.py  test_publisher.py  test_publisher_firestore.py  test_rotation_modes.py  test_series_storage.py  test_storage.py  (+3 more)
(+80 files in other folders)
