[project]
name = "event-ledger"
version = "0.1.0"
description = "A recurring-schedule platform with workspaces, series, and check-ins"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-firestore>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "firebase-admin>=6.0.0",
    "keyring>=25.0.0",
    "icalendar>=5.0.0",
]

[project.scripts]
login = "login:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
